--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t stephengrider/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run stephengrider/react-test npm test -- --coverage
+  -  - docker run -e CI=true martinshell/react-test npm test
 
 after_success:
   - docker build -t stephengrider/multi-client ./client
