--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,23 @@ services:
   - docker
 
 before_install:
-  - docker build -t stephengrider/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t martinshell/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   -  - docker run -e CI=true martinshell/react-test npm test
 
 after_success:
-  - docker build -t stephengrider/multi-client ./client
-  - docker build -t stephengrider/multi-nginx ./nginx
-  - docker build -t stephengrider/multi-server ./server
-  - docker build -t stephengrider/multi-worker ./worker
+  - docker build -t martinshell/multi-client ./client
+  - docker build -t martinshell/multi-nginx ./nginx
+  - docker build -t martinshell/multi-server ./server
+  - docker build -t martinshell/multi-worker ./worker
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker push stephengrider/multi-client
-  - docker push stephengrider/multi-nginx
-  - docker push stephengrider/multi-server
-  - docker push stephengrider/multi-worker
+  - docker push martinshell/multi-client
+  - docker push martinshell/multi-nginx
+  - docker push martinshell/multi-server
+  - docker push martinshell/multi-worker
 
 deploy:
   provider: elasticbeanstalk
